# rvforge

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: riscv64.yml
cmake/: RVForgeUtils.cmake
docs/: rvv_analysis.md
docs/errors/: build_log.md  error_log.md
harness/: CMakeLists.txt  blas_full_suite.c  blas_smoke.c  mpfr_full_suite.c  mpfr_smoke.c  numerical_suite.c  rvv_correctness.c  rvv_vs_scalar_bench.c  simd_audit_report.c
patches/: 0001-gmp-riscv-host-detect.patch  0002-openblas-riscv64-target.patch  0003-openblas-cpuid-guard.patch  0004-openblas-dgemv-sse2-scalar.patch  0005-openblas-dgemm-avx-scalar.patch  0006-openblas-sgemm-avx-scalar.patch  0007-openblas-zgemm-avx-scalar.patch  0008-openblas-memory-sse-scalar.patch  README.md
ports/mpfr/: CMakeLists.txt
ports/openblas/: CMakeLists.txt
rvv/: rvv_daxpy.c  rvv_ddot.c  rvv_dgemm.c  rvv_dgemv.c  rvv_dispatch.h  rvv_dnrm2.c
scripts/: apply_patches.sh  bench_baseline.sh  bench_rvv.sh  bootstrap.sh  diff_results.sh  run_qemu.sh  run_upstream_tests.sh  simd_audit.sh  validate_qemu.sh
simd_fallbacks/: rvforge_simd.h  scalar_dgemm.c  scalar_dgemv.c  scalar_memory.c  scalar_sgemm.c
toolchain/: flags.cmake  riscv64-linux-gnu.cmake
validation/: compare_outputs.py  epsilon.h  output_capture.h
